--- a/contest/templates/contest/editContest.html
+++ b/contest/templates/contest/editContest.html
@@ -21,12 +21,11 @@ SOFTWARE.
 <title>New Contest</title>
 {% endblock title_name %} {% block import_source %}
 
-<script src="{% static 'contest/js/jquery.multi-select.js' %}" type="text/javascript"></script>
+<script src="{% static 'multiselect/js/jquery.multi-select.js' %}" type="text/javascript"></script>
 <script src="{% static 'contest/js/editContest.js' %}" type="text/javascript"></script>
-<script src="{% static 'contest/js/jquery.quicksearch.js' %}" type="text/javascript"></script>
+<script src="{% static 'quicksearch/jquery.quicksearch.js' %}" type="text/javascript"></script>
 <script src="{% static 'contest/js/search.js' %}" type="text/javascript"></script>
-<link href="{% static 'contest/css/multi-select.css'%}" media="screen" rel="stylesheet" type="text/css"> 
-<script src="{%static 'contest/js/function.js'%}"></script>
+<link href="{% static 'multiselect/css/multi-select.css'%}" media="screen" rel="stylesheet" type="text/css"> 
 {% endblock import_source %} 
 {% block body_block %}
 <div class="container" style="width:40%;">
