--- a/users/templates/users/auth.html
+++ b/users/templates/users/auth.html
@@ -46,7 +46,7 @@ SOFTWARE.
           <li class='col-md-offset-2'><strong style="color:red">{{ error|escape }}</strong></li>
         {% endfor %}
       </ul>
-      {% endif %} 
+      {% endif %}
       {% if field.errors %}
       <ul>
         {% for error in field.errors %}
@@ -57,15 +57,15 @@ SOFTWARE.
     </div>
     {% endfor %}
     <div class="modal-footer">
-      <div id='msg' class='col-md-4'>{{ message }}</div>
+      <div id='msg' class='col-md-6'>{{ message }}</div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </div>
     <hr>
-    <div class="poptxt_login">
-      Don't have an account? You can 
-      <a href={% url "users:create" %}>
-        <p class="p6">register here</p>
-      </a>
+    <div>
+      Don't have an account? You can
+      <a href={% url "users:create" %}>register here</a>.<br>
+      Forget your password? You can change your password
+      <a href={% url "users:forget_password" %}>here</a>.
     </div>
   </form>
 </div>
