--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -1,14 +1,18 @@
 <!--
 The MIT License (MIT)
+
 Copyright (c) 2014 NTHUOJ team
+
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:
+
 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.
+
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -43,11 +47,11 @@ SOFTWARE.
     <link rel="stylesheet" href={% static "css/index.css" %} media="screen">
     <link rel="stylesheet" href={% static "css/mfp-fade.css" %} media="screen">
     <script src={% static "js/clock.js" %}></script>
+    <script src={% static "js/ZeroClipboard.js"%}></script>
     {% block import_source %}
     {% endblock import_source %}
   </head>
   <body>
-
     <!-- feedback-popup -->
     <div id="feedback-popup" class="mfp-hide">
       <div class="jumbotron popdiv">
@@ -202,7 +206,9 @@ SOFTWARE.
     </div>
     <!-- footer -->
     <div class="footer sticky-footer">
-      <a href="" id="contact_us">Contact us</a>
+      <button id="contact_us" data-clipboard-text="nthucsoj@gmail.com" title="Click to copy me.">Contact us
+      </button>
+      <script src={% static "js/clipboard.js"%}></script>
       <p id="footer_text">
       © NTHU Online Judge 2014, Templates are from Bootstrap Project</p>
       <p id='time'>
