use bower download

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -47,7 +47,7 @@ SOFTWARE.
     <link rel="stylesheet" href={% static "css/index.css" %} media="screen">
     <link rel="stylesheet" href={% static "css/mfp-fade.css" %} media="screen">
     <script src={% static "js/clock.js" %}></script>
-    <script src={% static "js/ZeroClipboard.js"%}></script>
+    <script src={% static "zeroclipboard/dist/ZeroClipboard.js"%}></script>
     {% block import_source %}
     {% endblock import_source %}
   </head>
