--- a/contest/templates/contest/editContest.html
+++ b/contest/templates/contest/editContest.html
@@ -18,7 +18,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
 {% extends "index/base.html" %} {% load staticfiles %} {% block title_name %}
-<title>New Contest</title>
+<title>{{ title }}</title>
 {% endblock title_name %} {% block import_source %}
 
 <script src="{% static 'contest/js/jquery.multi-select.js' %}" type="text/javascript"></script>
@@ -30,7 +30,8 @@ SOFTWARE.
 <script src="{%static 'contest/js/function.js'%}"></script>
 {% endblock import_source %} 
 {% block body_block %}
-<div class="container" style="width:40%;">
+<div class="container" style="width:50%;">
+    <div class="well"><h2>{{ title }}</h2></div>
     <form action="." method="POST">
         {% csrf_token %}
         {% for field in form %}
