handle edit contest error. modified clarification models typo

--- a/contest/static/contest/css/editContest.css
+++ b/contest/static/contest/css/editContest.css
@@ -28,3 +28,8 @@ div.selected-header{
 	background-color: #449d44;
 	border-color: #398439;
 }
+
+ul.errorlist{
+	color: #fff;
+	background-color: #d9534f;
+}
