--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -73,7 +73,7 @@ SOFTWARE.
               <th>Asker</th>
               <th>Description</th>
               <th>Reply</th>
-              <th>Replyer</th>
+              <th>Replier</th>
               <th>Reply Time</th>
             </tr>
           </thead>
@@ -92,7 +92,7 @@ SOFTWARE.
               <td>{{ clarification.asker }}</td>
               <td>{{ clarification.content }}</td>
               <td>{{ clarification.reply }}</td>
-              <td>{{ clarification.replyer }}</td>
+              <td>{{ clarification.replier }}</td>
               <td>{{ clarification.reply_time }}</td>
             </tr>
             {% endfor %}
