--- a/index/templates/index/autocomplete.html
+++ b/index/templates/index/autocomplete.html
@@ -5,7 +5,7 @@
 // for the navigation autocomplete.
 $('#yourInput').yourlabsAutocomplete({
     // Url of the view you just created
-    url: '{% url "search" %}',
+    url: 'http://localhost:8000/search/',
 
     // With keyboard, we should iterate around <a> tags in the autocomplete
     choiceSelector: 'a',
