--- a/index/templates/index/team_list.html
+++ b/index/templates/index/team_list.html
@@ -21,14 +21,29 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-<!DOCTYPE html>
-{% extends "index/base.html" %}
-{% load static %}
+<!DOCTYPE html> {% extends "index/base.html" %} {% load static %} {% block title_name %}
+<title>team_list</title>
+{% endblock title_name %} {% block import_source %}
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js" type="text/javascript"></script>
+{% include 'autocomplete_light/static.html' %} {% endblock import_source %} {% block body_block %}
+<script type="text/javascript">
+$(function() { // Change #yourInput by a selector that matches the input you want to use
+    // for the navigation autocomplete.
+    $('#yourInput').yourlabsAutocomplete({
+        // Url of the view you just created
+        url: '{% url "index:search" %}'
 
-{% block title_name %}
-  <title>team_list</title>
-{% endblock title_name %}
-{% block import_source %}
-{% endblock import_source %}
-{% block body_block %}
-{% endblock body_block %}
+        // With keyboard, we should iterate around <a> tags in the autocomplete
+        //choiceSelector: 'p',
+    }).input.bind('selectChoice', function(e, choice, autocomplete) {
+        // When a choice is selected, open it. Note: this is not needed for
+        // mouse click on the links of course, but this is necessary for keyboard
+        // selection.
+        window.location.href = choice.attr('href');
+    });
+})
+</script>
+GG:
+<input id="yourInput">
+<br>
+<hr> {{form}} {% endblock body_block %}
