modify url error

--- a/problem/templates/problem/panel.html
+++ b/problem/templates/problem/panel.html
@@ -27,7 +27,7 @@ SOFTWARE.
   <h2>Problem Panel</h2>
   <div>
     {% if can_add_problem %}
-    <a style='float:left' class="btn btn-warning" href="{% url 'problem:problem.views.new' %}"
+    <a style='float:left' class="btn btn-warning" href="{% url 'problem:new' %}"
       data-toggle="tooltip" data-placement="right" title="add problem">+</a>
     {% endif %}
     <div style='float:right; width:50%'>
