--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -81,7 +81,9 @@ SOFTWARE.
       <tbody id="contest_content">
         {% for c_running in c_runnings %}
           <tr id="contest_{{ c_running.id }}">
-            <td>{{ c_running.cname }}</td>
+            <td>
+              <a href="{% url 'contest:contest' c_running.id %}">{{ c_running.cname }}</a>
+            </td>
             <td name="remain"></td>
             <td></td>
             <td name="end" class="end">{{ c_running.end_time|date:"Y/m/d H:i:s" }}</td>
@@ -91,7 +93,9 @@ SOFTWARE.
         {% endfor %}
         {% for c_upcoming in c_upcomings %}
           <tr>
-            <td>{{ c_upcoming.cname }}</td>
+            <td>
+              <a href="{% url 'contest:contest' c_upcoming.id %}">{{ c_upcoming.cname }}</a>
+            </td>
             <td></td>
             <td  name="upcome"></td>
             <td  name="start" class="start">{{ c_upcoming.start_time|date:"Y/m/d H:i:s" }}</td>
