--- a/index/static/css/index.css
+++ b/index/static/css/index.css
@@ -151,14 +151,16 @@ textarea#inputSmall {
   color:white;
 }
 #notification{
-  padding: 0px;
-  height: 50px;
-  width: 50px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 2px;
+  padding-bottom: 5px;
+  margin: 0px;
 }
 #notification_img{
   cursor: pointer;
-  height: 50px;
-  width: 50px;
+  height :40px;
+  width: 40px;
 }
 #notification_circle{
   position: relative;
@@ -240,6 +242,11 @@ textarea#inputSmall {
 .nav-text-auth{
   font-size: 25px;
 }
+.nav-text-brand{
+  font-size: 25px;
+  position: relative;
+  left: -12px;
+}
 .footer{
   width: 100%;
   height: 43px;
@@ -256,14 +263,14 @@ textarea#inputSmall {
   margin-left: 220px;
   margin-bottom: 50px;
 }
-#username {
-  position: relative;
-  top: -5px;
-}
-.name {
-  position: relative;
-  left: 7px;
-}
 #name-text:hover {
   text-decoration: underline;
+}
+.navbar-nav > li > a {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin: 0px;
+}
+.navbar {
+  min-height: 4%;
 }
