--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -128,7 +128,7 @@ SOFTWARE.
                 NTHU Online Judge
               </a>
             </li>
-            <li  class="nav-text"><a href="{% url 'contest:archive' %}" class="nav-padding">Contest</a></li>
+            <li  class="nav-text"><a href="{% url 'index:index' %}">Contest</a></li>
             <li  class="nav-text"><a href="{% url 'problem:volume' %}">Problem</a></li>
             <li  class="nav-text"><a href="{% url 'users:submit' %}">Submit</a></li>
             <li  class="nav-text"><a href="{% url 'status:status' %}">Status</a></li>
