--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -124,11 +124,11 @@ SOFTWARE.
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
           <ul class="nav navbar-nav">
             <li  class="nav-text-brand">
-              <a href="{% url 'contest:archive' %}" class="nav-padding">
+              <a href="{% url 'index:index' %}">
                 NTHU Online Judge
               </a>
             </li>
-            <li  class="nav-text"><a href="{% url 'index:index' %}">Contest</a></li>
+            <li  class="nav-text"><a href="{% url 'contest:archive' %}">Contest</a></li>
             <li  class="nav-text"><a href="{% url 'problem:volume' %}">Problem</a></li>
             <li  class="nav-text"><a href="{% url 'users:submit' %}">Submit</a></li>
             <li  class="nav-text"><a href="{% url 'status:status' %}">Status</a></li>
