can see pass rate

--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -51,11 +51,11 @@ SOFTWARE.
         </td>
         <td>
           <div class="progress">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{p.pass}}" aria-valuemin="0" aria-valuemax="100" style="width: {{p.pass}}%;">
-              {{p.pass}}%
+            <div class="progress-bar progress-bar-success" style="width: {{p.pass_rate}}%;">
+              {{p.pass_rate}}%
             </div>
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="{{p.not_pass}}" aria-valuemin="0" aria-valuemax="100" style="width: {{p.not_pass}}%;">
-              {{p.not_pass}}%
+            <div class="progress-bar progress-bar-danger" style="width: {{p.not_pass_rate}}%;">
+              {{p.not_pass_rate}}%
             </div>
           </div>
         </td>
