--- a/index/static/css/index.css
+++ b/index/static/css/index.css
@@ -274,3 +274,8 @@ textarea#inputSmall {
 .navbar {
   min-height: 4%;
 }
+#announcement-add {
+  position: relative;
+  top: -5px;
+  left: 10px;
+}
