--- a/index/templates/index/announcement_create.html
+++ b/index/templates/index/announcement_create.html
@@ -29,7 +29,7 @@ SOFTWARE.
   <title>announcement</title>
 {% endblock title_name %}
 {% block import_source %}
-
+{{ form.media }}
 <link rel="stylesheet" href={% static "css/announcement.css" %} media="screen">
 {% endblock import_source %}
 {% block body_block %}
