--- a/index/static/css/announcement.css
+++ b/index/static/css/announcement.css
@@ -21,7 +21,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
-#announcement-create {
-  margin-right: 220px;
-  margin-left: 220px;
+.container {
+  width: 50%;
+  margin-bottom: 200px;
 }
