--- a/status/templates/status/status.html
+++ b/status/templates/status/status.html
@@ -25,7 +25,7 @@ SOFTWARE.
 
 {% block body_block %}
 
-<div class="container-fulid">
+<div class="container-fluid">
   <h1>Status</h1>
   {% include "status/statusTable.html" %}
   <ul class="pager">
