--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -26,7 +26,7 @@ SOFTWARE.
 {% load static %}
 
 {% block title_name %}
-  <title>index</title>
+  <title>Index</title>
 {% endblock title_name %}
 {% block import_source %}
 <script src={% static "js/contestTimer.js" %}></script>
@@ -51,6 +51,7 @@ SOFTWARE.
   </div>
 
   <!-- announcement -->
+  {% if announcements.count > 0 %}
   <div id="announcement" class="center">
     <h3 style="display: inline;"><b>Announcements</b></h3>
     {% if user.has_admin_auth %}
@@ -69,11 +70,26 @@ SOFTWARE.
         {% for announcement in announcements %}
           <tr class="warning">
             <td><h3>{{ announcement.content|linebreaksbr}}</h3></td>
+            {% if user.has_admin_auth %}
+            <td style="text-align: right;width: 5%">
+              <a href="{% url 'index:announcement_update' announcement.id %}">
+                <button type="button" class="btn btn-warning btn-xs">
+                  <span class="glyphicon glyphicon-pencil"></span>
+                </button>
+              </a>
+              <a href="{% url 'index:announcement_delete' announcement.id %}">
+                <button type="button" class="btn btn-danger btn-xs">
+                  <span class="glyphicon glyphicon-remove"></span>
+                </button>
+              </a>
+            </td>
+            {% endif %}
           </tr>
         {% endfor %}
       </tbody>
     </table>
   </div>
+  {% endif %}
   <!-- contest -->
   <div id="contest" class="center">
     <h3><b>Running Contest</b></h3>
