--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -133,16 +133,16 @@ SOFTWARE.
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
           <ul class="nav navbar-nav">
-            <li  class="nav-text-brand">
+            <li class="nav-text-brand">
               <a href="{% url 'index:index' %}">
                 NTHU Online Judge
               </a>
             </li>
-            <li  class="nav-text"><a href="{% url 'contest:archive' %}">Contest</a></li>
-            <li  class="nav-text"><a href="{% url 'problem:volume' %}">Problem</a></li>
-            <li  class="nav-text"><a href="{% url 'users:submit' %}">Submit</a></li>
-            <li  class="nav-text"><a href="{% url 'status:status' %}">Status</a></li>
-            <li  class="nav-text"><a href="{% url 'group:list' %}">Group</a></li>
+            <li class="nav-text"><a href="{% url 'contest:archive' %}">Contest</a></li>
+            <li class="nav-text"><a href="{% url 'problem:volume' %}">Problem</a></li>
+            <li class="nav-text"><a href="{% url 'users:submit' %}">Submit</a></li>
+            <li class="nav-text"><a href="{% url 'status:status' %}">Status</a></li>
+            <li class="nav-text"><a href="{% url 'group:list' %}">Group</a></li>
             <!--
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -176,12 +176,14 @@ SOFTWARE.
               </ul>
             </li>
             {% endif %}
+            <li class="nav-text">
+              <form class="navbar-form">
+                <div class="form-group">
+                  <input id="globalNavigation" type="text" class="form-control" placeholder="Search Site">
+                </div>
+              </form>
+            </li>
           </ul>
-          <form class="navbar-form">
-            <div class="form-group">
-              <input id="globalNavigation" type="text" class="form-control" placeholder="Search Site">
-            </div>
-          </form>
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
             <li>
