--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -167,12 +167,12 @@ SOFTWARE.
             {% if user.is_authenticated %}
             <li class="dropdown nav-text">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                 role="button" aria-expanded="false">User
+                 role="button" aria-expanded="false">Personal
                  <span class="caret"></span>
                </a>
               <ul class="dropdown-menu" role="menu">
-                <a href={% url "users:profile" user.username %}>Profile</a>
-                <a href={% url "status:status" user.username %}>Submissions</a>
+                <li><a href={% url "users:profile" user.username %}>Profile</a></li>
+                <li><a href={% url "status:status" user.username %}>Submissions</a></li>
               </ul>
             </li>
             {% endif %}
