--- a/users/templates/users/blockWrongTries.html
+++ b/users/templates/users/blockWrongTries.html
@@ -1,3 +1,13 @@
-You are seeing this because have more than 3 wrong tries.
-You can
-{{ip}}
+{% extends "index/base.html" %}
+{% load static %}
+
+{% block body_block %}
+<div class="container" style="text-align:center">
+  <h3>You are temporarily blocked from signing in</h3>
+  <p>
+      You are seeing this because you have more than 3 wrong login attempts.<br>
+      Your login access will be freezed until <b>{{unblock_time}}</b><br>
+  </p>
+
+</div>
+{% endblock body_block %}
