--- a/index/templates/index/forget_password_email.html
+++ b/index/templates/index/forget_password_email.html
@@ -24,7 +24,7 @@ SOFTWARE.
 Hi <b>{{username}}</b>, here comes the link to your profile.<br>
 To reset your password, just click the <a href="{{profile_link}}">link</a>.<br>
 Profile link: {{profile_link}}<br>
-The link is active until {{active_time}}<br>
+The link is active until {{active_time}} and can be used only once.<br>
 <br>
 All the best,<br>
     NTHUOJ Team
