--- a/users/templates/users/blockWrongTries.html
+++ b/users/templates/users/blockWrongTries.html
@@ -2,12 +2,13 @@
 {% load static %}
 
 {% block body_block %}
-<div class="container" style="text-align:center">
-  <h3>You are temporarily blocked from signing in</h3>
-  <p>
+  <div class="container"
+       style="margin-top:50px;margin-bottom:50px;min-height:500px;">
+    <p style="text-align: center;font-size: 75px;">Blocked!</p>
+    <p style="text-align: center;font-size: 30px;margin-top: 50px;">
       You are seeing this because you have more than 3 wrong login attempts.<br>
       Your login access will be freezed until <b>{{unblock_time}}</b><br>
-  </p>
-
-</div>
+      You can still utilize other functionalities of this site.
+    </p>
+  </div>
 {% endblock body_block %}
