consider .cpp source

--- a/problem/templates/problem/editTab/info.html
+++ b/problem/templates/problem/editTab/info.html
@@ -39,10 +39,10 @@ SOFTWARE.
   {% endif %}
 {% endfor %}
 {% if has_special_judge_code %}
-Special Judge Code: <a href="/{{path.SPECIAL_PATH}}{{pid}}.c">{{pid}}.c</a>
+Special Judge Code: <a href="/{{path.SPECIAL_PATH}}{{pid}}{{file_ex}}">{{pid}}{{file_ex}}</a>
 {% endif %}
 {% if has_partial_judge_code %}
-Partial Judge Code: <a href="/{{path.PARTIAL_PATH}}{{pid}}.c">{{pid}}.c</a>
+Partial Judge Code: <a href="/{{path.PARTIAL_PATH}}{{pid}}{{file_ex}}">{{pid}}{{file_ex}}</a>
 {% endif %}
 <br>
 <br>
