--- a/index/static/css/index.css
+++ b/index/static/css/index.css
@@ -288,23 +288,20 @@ textarea#inputSmall {
 }
 .status {
   font-size: 120px;
-  font-family: impact;
-  text-align: left;
-  margin-bottom: -40px;
+  margin-bottom: -20px;
+  text-align: center;
 }
 .status-title {
   font-size: 70px;
-  font-family: impact;
-  text-align: left;
-  color: black;
-  margin-bottom: 0px;
+  text-align: center;
+}
+.status-message {
+  font-size: 50px;
+  text-align: center;
 }
 .status-condition {
   font-size: 30px;
-  font-family: impact;
-  text-align: left;
-  color: black;
-  margin-bottom: 0px;
+  text-align: center;
 }
 #time {
   margin-bottom: 0px;
