--- a/index/templates/index/404.html
+++ b/index/templates/index/404.html
@@ -28,16 +28,22 @@ SOFTWARE.
 <head>
   <meta charset="UTF-8">
   <!-- bootstrap, bootwatch JS & CSS -->
+  {% if user.is_authenticated %}
+  <link rel="stylesheet" href="{% static '' %}bootswatch/{{user.theme}}/bootstrap.css">
+  {% else %}
   <link rel="stylesheet" href={% static "bootswatch/paper/bootstrap.css" %}>
+  {% endif %}
   <script src={% static "bootstrap/dist/js/bootstrap.min.js" %}></script>
   <link rel="stylesheet" href={% static "./css/index.css"%} media="screen">
 </head>
 <body>
   <div style="position:relative;bottom:0px;">
-    <p style="text-align:center" class="status" >4&nbsp0&nbsp4</p>
+    <p class="status" >4&nbsp0&nbsp4</p>
   </div>
-  <p style="text-align:center" class="status-title">Page Not Found</p>
-  <p style="text-align:center" class="status-condition">
+  <br>
+  <p class="status-title">Page Not Found</p>
+  <br>
+  <p class="status-condition">
     Sorry , the page you are looking for seems to be missing.
   </p>
 </body>
