--- a/users/templates/users/codeEditor.html
+++ b/users/templates/users/codeEditor.html
@@ -78,6 +78,6 @@ SOFTWARE.
 
 <div id="keybindings-popup" class="mfp-hide">
   <div class="jumbotron">
-    {% include "users/keybindings.html" %}
+    {% include "users/keyBindings.html" %}
   </div>
 </div>
