--- a/users/templates/users/submit.html
+++ b/users/templates/users/submit.html
@@ -24,5 +24,5 @@ SOFTWARE.
 {% extends "index/base.html" %} 
 {% load static %}
 {% block body_block %}
-  {% include "users/code_editor.html" %}
+  {% include "users/codeEditor.html" %}
 {% endblock body_block %}
