--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -142,7 +142,7 @@ SOFTWARE.
       <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav">
           <li><a href="{% url 'contest:archive' %}"><p class="p2">Contest</p></a></li>
-          <li><a href="{% url 'problem:volume' %}"><p class="p2">Problem</p></a></li>
+          <li><a href="{% url 'problem:problem' %}"><p class="p2">Problem</p></a></li>
           <li><a href="{% url 'users:submit' %}"><p class="p2">Submit</p></a></li>
           <li><a href="{% url 'status:status' %}"><p class="p2">Status</p></a></li>
           <li><a href="{% url 'group:list' %}"><p class="p2">Group</p></a></li>
