fix typo and css

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -197,7 +197,7 @@ SOFTWARE.
     </div>
 
     <!-- footer -->
-    <div class="sticky-footer panel-primary">
+    <div class="panel-primary sticky-footer ">
       <div class="panel-heading footer">
         <button id="contact_us" data-clipboard-text="nthucsoj@gmail.com" title="Click to copy me.">Contact us
         </button>
