--- a/index/templates/index/404.html
+++ b/index/templates/index/404.html
@@ -43,6 +43,8 @@ SOFTWARE.
   <br>
   <p class="status-title">Page Not Found</p>
   <br>
+  <p class="status-message">{{ error_message }}</p>
+  <br>
   <p class="status-condition">
     Sorry , the page you are looking for seems to be missing.
   </p>
