fix typo and add space

--- a/contest/templates/contest/register.html
+++ b/contest/templates/contest/register.html
@@ -51,7 +51,7 @@ SOFTWARE.
           {% endif %}
         </table>
         <table width='100%'>
-          <tr class="saparate-area"></tr>
+          <tr class="separate-area"></tr>
           {% if groups %}
           <tr>
             <td>
