--- a/contest/templates/contest/register.html
+++ b/contest/templates/contest/register.html
@@ -79,7 +79,7 @@ SOFTWARE.
         
         {% if user|has_auth:contest.id %}
         <table width='100%'>
-          <tr class="saparate-area"></tr>
+          <tr class="separate-area"></tr>
           <tr>
             <td>
               <a class="btn btn-success btn-lg btn-block" data-toggle="collapse"
