--- a/contest/templates/contest/register.html
+++ b/contest/templates/contest/register.html
@@ -48,7 +48,7 @@ SOFTWARE.
             </td>
           </tr>
           {% endif %}
-          <tr class="saparate-area"></tr>
+          <tr class="separate-area"></tr>
           {% if groups %}
           <tr>
             <td>
