add problem name before add problem, show problem name when editing

--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -29,6 +29,7 @@ SOFTWARE.
 {% endblock %}
 {% block body_block %} 
 <div class="container" id="Body">
+  <h4>You are editing problem {{pid}}: {{pname}}</h4>
   <div style="width:80%; float:left;">
     <ul class="nav nav-tabs" role="tablist">
       <li class="active">
